py/vm.c
@@ -1305,7 +1305,7 @@ pending_exception_check:
                     if (MP_STATE_VM(sched_state) == MP_SCHED_PENDING) {
                         MARK_EXC_IP_SELECTIVE();
                         mp_obj_t obj = MP_STATE_VM(mp_pending_exception);
-                        if (obj != MP_OBJ_NULL) {
+                        if (MP_THREAD_IS_MAIN() && obj != MP_OBJ_NULL) {
                             MP_STATE_VM(mp_pending_exception) = MP_OBJ_NULL;
                             if (!mp_sched_num_pending()) {
                                 MP_STATE_VM(sched_state) = MP_SCHED_IDLE;
@@ -1320,7 +1320,7 @@ pending_exception_check:
                 }
                 #else
                 // This is an inlined variant of mp_handle_pending
-                if (MP_STATE_VM(mp_pending_exception) != MP_OBJ_NULL) {
+                if (MP_THREAD_IS_MAIN() && MP_STATE_VM(mp_pending_exception) != MP_OBJ_NULL) {
                     MARK_EXC_IP_SELECTIVE();
                     mp_obj_t obj = MP_STATE_VM(mp_pending_exception);
                     MP_STATE_VM(mp_pending_exception) = MP_OBJ_NULL;
